--- a/FlickMeter.Web/index.html
+++ b/FlickMeter.Web/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <div class="navbar navbar-default">
-        <div class="container">
+        <div class="container" data-ng-controller="navigationController">
             <div class="navbar-header">
                 <a id="logo" href="#" class="navbar-brand">FlickMeter</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
-                    <li><a href="#/latest">Latest Movies</a></li>
-                    <li><a href="#/upcoming">Upcoming Movies</a></li>
-                    <li><a href="#/about">About</a></li>
+                    <li data-ng-class="{'active':isActive('/latest')}"><a href="#/latest">Latest Movies</a></li>
+                    <li data-ng-class="{'active':isActive('/upcoming')}"><a href="#/upcoming">Upcoming Movies</a></li>
+                    <li data-ng-class="{'active':isActive('/about')}"><a href="#/about">About</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -62,3 +62,4 @@
 <script type="text/javascript" src="app/services/flickMeterMovieService.js"></script>
 <script type="text/javascript" src="app/services/flickMeterMovieDetailService.js"></script>
 <script type="text/javascript" src="app/controllers/movieDetailController.js"></script>
+<script src="app/controllers/navigationController.js"></script>
